--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
         h1{
             text-align: center;
         }
+        red1{
+            width:300px;
+            height:300px;
+            background-color:red;
+        }
       </style>
 </head>
 <body>
    <h1>Мой сайт.</h1>
+    <div class="red1"></div>
    
 </body>
     </html>
