--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         h1{
             text-align: center;
         }
-        red1{
+        .red1{
             width:300px;
             height:300px;
             background-color:red;
